syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.william";
option java_outer_classname = "pixGRPC";
option objc_class_prefix = "HLW";
import "google/protobuf/timestamp.proto";

package br.com.zup.william;

service RegistraKeyManagerPixGRPCService {
  rpc regista (RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service RemoveKeyManagerPixGRPCService{
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

service BuscarKeyManagerPixGRPCService{
  rpc buscar (BuscarChavePixRequest) returns (BuscarChavePixResponse){}
}

service ListarrKeyManagerPixGRPCService{
  rpc listar (ListarChavePixRequest) returns (ListarChavePixResponse){}
}
message ListarChavePixRequest{
  string idDoCliente = 1;
}

message ListarChavePixResponse{
  message Listar{
    string pixId = 1;
    string idDoCliente = 2;
    TipoDeChave tipoDeChave = 3;
    string valorDaChave = 4;
    TipoDeConta tipoDeConta = 5;
    google.protobuf.Timestamp criadaEm= 6;
  }
  string clientId = 1;
  repeated Listar chaves = 2;

}

message BuscarChavePixRequest{
  message FiltroPorPixId {
    string clientId = 1;
    string pixId = 2;
  }

  oneof filtro{
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message BuscarChavePixResponse{
  message ChavePix {
    message ContaInfo{
      TipoDeConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string  agencia = 5;
      string numeroDaConta = 6;
    }
    TipoDeChave tipoDaChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message RemoveChavePixRequest{
  string pixId = 1;
  string idDoCliente = 2;
}

message RemoveChavePixResponse{
  string mensagem = 1;
  string pixId = 2;
  string idDoCliente = 3;
}

message  RegistraChavePixRequest{
  string idDoCliente = 1;
  TipoDeChave tipoDeChave = 2;
  string  valorDaChave = 3;
  TipoDeConta tipoDeConta = 4;
}
enum TipoDeChave{
  TIPO_DE_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}
enum TipoDeConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
message  RegistraChavePixResponse{
  string idDoCliente = 1;
  string pixId = 2;
}

message ProjetoKeyManagerPixGRPCRequest {
  string name = 1;
}

message ProjetoKeyManagerPixGRPCReply {
  string message = 1;
}